// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DCFormField Renders all the input components without error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCText",
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCText",
      "description": "A description for this input",
      "displayName": "DCText",
      "error": "",
      "name": "myTextInput",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCText",
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCBoolean",
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "value": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCBoolean",
      "description": "A description for this input",
      "displayName": "DCBoolean",
      "name": "myBooleanInput",
      "value": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCBoolean",
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "value": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCNumber",
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCNumber",
      "description": "A description for this input",
      "displayName": "DCNumber",
      "error": "",
      "name": "myNumberInput",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCNumber",
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCRadio",
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCRadio",
      "description": "A description for this input",
      "displayName": "DCRadio",
      "error": "",
      "name": "myRadioInput",
      "options": Array [
        Object {
          "key": "thisOption",
          "text": "This option",
          "value": "thisOption",
        },
        Object {
          "key": "thatOption",
          "text": "That option",
          "value": "thatOption",
        },
        Object {
          "key": "somethingElse",
          "text": "Something else",
          "value": "somethingElse",
        },
      ],
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCRadio",
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDate",
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDate",
      "description": "A description for this input",
      "displayName": "DCDate",
      "error": "",
      "name": "myDateInput",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDate",
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Role/",
          "https://metadata.ssbmod.net/data/Agent/",
        ],
        "error": "",
        "multiSelect": false,
        "name": "myDropdownSingleSelectInput",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDropdown",
      "description": "A description for this input",
      "displayName": "DCDropdown",
      "endpoints": Array [
        "https://metadata.ssbmod.net/data/Role/",
        "https://metadata.ssbmod.net/data/Agent/",
      ],
      "error": "",
      "multiSelect": false,
      "name": "myDropdownSingleSelectInput",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Role/",
          "https://metadata.ssbmod.net/data/Agent/",
        ],
        "error": "",
        "multiSelect": false,
        "name": "myDropdownSingleSelectInput",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown (multiSelect)",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Agent/",
          "https://metadata.ssbmod.net/data/Role/",
        ],
        "error": "",
        "multiSelect": true,
        "name": "myDropdownMultipleSelectInput",
        "required": true,
        "value": Array [],
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDropdown",
      "description": "A description for this input",
      "displayName": "DCDropdown (multiSelect)",
      "endpoints": Array [
        "https://metadata.ssbmod.net/data/Agent/",
        "https://metadata.ssbmod.net/data/Role/",
      ],
      "error": "",
      "multiSelect": true,
      "name": "myDropdownMultipleSelectInput",
      "required": true,
      "value": Array [],
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown (multiSelect)",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Agent/",
          "https://metadata.ssbmod.net/data/Role/",
        ],
        "error": "",
        "multiSelect": true,
        "name": "myDropdownMultipleSelectInput",
        "required": true,
        "value": Array [],
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 8`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCMultiInput",
        "description": "A description for this input",
        "displayName": "DCMultiInput",
        "endpoint": "https://metadata.ssbmod.net/data/Protocol/",
        "error": "",
        "name": "myDCMultiInputInput",
        "required": true,
        "value": Array [
          Object {
            "option": "",
            "text": "",
          },
        ],
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCMultiInput",
      "description": "A description for this input",
      "displayName": "DCMultiInput",
      "endpoint": "https://metadata.ssbmod.net/data/Protocol/",
      "error": "",
      "name": "myDCMultiInputInput",
      "required": true,
      "value": Array [
        Object {
          "option": "",
          "text": "",
        },
      ],
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCMultiInput",
        "description": "A description for this input",
        "displayName": "DCMultiInput",
        "endpoint": "https://metadata.ssbmod.net/data/Protocol/",
        "error": "",
        "name": "myDCMultiInputInput",
        "required": true,
        "value": Array [
          Object {
            "option": "",
            "text": "",
          },
        ],
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 9`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (standard)",
        "format": "",
        "name": "myDCStaticInput",
        "value": Array [
          "Value",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (standard)",
      "format": "",
      "name": "myDCStaticInput",
      "value": Array [
        "Value",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (standard)",
        "format": "",
        "name": "myDCStaticInput",
        "value": Array [
          "Value",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 10`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (date)",
        "format": "date",
        "name": "myDCStaticDateInput",
        "value": Array [
          "2018-11-09T12:37:15.645Z",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (date)",
      "format": "date",
      "name": "myDCStaticDateInput",
      "value": Array [
        "2018-11-09T12:37:15.645Z",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (date)",
        "format": "date",
        "name": "myDCStaticDateInput",
        "value": Array [
          "2018-11-09T12:37:15.645Z",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 11`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (tags)",
        "format": "tag",
        "name": "myDCStaticTagInput",
        "value": Array [
          "A tag",
          "Another tag",
          "A third?",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (tags)",
      "format": "tag",
      "name": "myDCStaticTagInput",
      "value": Array [
        "A tag",
        "Another tag",
        "A third?",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (tags)",
        "format": "tag",
        "name": "myDCStaticTagInput",
        "value": Array [
          "A tag",
          "Another tag",
          "A third?",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 12`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (labels)",
        "format": "label",
        "name": "myDCStaticLabelInput",
        "value": Array [
          "A label",
          "Another label",
          "A third?",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (labels)",
      "format": "label",
      "name": "myDCStaticLabelInput",
      "value": Array [
        "A label",
        "Another label",
        "A third?",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (labels)",
        "format": "label",
        "name": "myDCStaticLabelInput",
        "value": Array [
          "A label",
          "Another label",
          "A third?",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 13`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (multi standard)",
        "format": "",
        "name": "myDCStaticMultiInput",
        "value": Array [
          "Value",
          "Another value",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (multi standard)",
      "format": "",
      "name": "myDCStaticMultiInput",
      "value": Array [
        "Value",
        "Another value",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (multi standard)",
        "format": "",
        "name": "myDCStaticMultiInput",
        "value": Array [
          "Value",
          "Another value",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 14`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (multi date)",
        "format": "date",
        "name": "myDCStaticDateMultiInput",
        "value": Array [
          "2018-11-09T12:37:15.646Z",
          "2019-11-09T12:37:15.646Z",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCStatic",
      "description": "A description for this input",
      "displayName": "DCStatic (multi date)",
      "format": "date",
      "name": "myDCStaticDateMultiInput",
      "value": Array [
        "2018-11-09T12:37:15.646Z",
        "2019-11-09T12:37:15.646Z",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCStatic",
        "description": "A description for this input",
        "displayName": "DCStatic (multi date)",
        "format": "date",
        "name": "myDCStaticDateMultiInput",
        "value": Array [
          "2018-11-09T12:37:15.646Z",
          "2019-11-09T12:37:15.646Z",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
